# scqr

./: README.md  pyproject.toml
src/scqr/: __init__.py
src/scqr/qr/: __init__.py  decode.py  encode.py  utils.py
src/test/: test_flow.py
src/test/data/: test_ranges.json  test_ranges_X10.json  test_ranges_X20.json  test_ranges_X5.json  test_ranges_ev.json  test_ranges_nice.json  test_ranges_pass.json
