[project]
name = "scqr"
version = "0.3.3"
description = "Package to read QRs and barcodes, parse them into CBM QC data and encoding into CBM QC QRs"
readme = "README.md"
authors = [
    { name = "LiorBuchScopio", email = "lior.buchmeier@scopiolabs.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cbor2>=5.8.0",
    "pillow>=10.0.0",
    "pytest>=9.0.2",
    "segno>=1.6.6",
    "zxing-cpp>=2.2.0",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "scopio-store"
url = "https://scopio-104939124827.d.codeartifact.us-east-1.amazonaws.com/pypi/scopio-store/simple/"
publish-url = "https://scopio-104939124827.d.codeartifact.us-east-1.amazonaws.com/pypi/scopio-store/"